# foundation-planckPythonWrapper

./: .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  .hgignore  AUTHORS.txt  DEPENDENCIES  Makefile  Makefile.conf  README.md  README.rst  dependencies.txt  local.conf.example  make.mak  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_ext.py  setup_linux.py  tox.ini
build-windows/: add_windows_libraries.py  pEpPythonAdapter.sln  pEpPythonAdapter.vcxproj  packages.config
docs/: Makefile
docs/source/: Doxyfile  conf.py  documentation.rst  index.rst  install.rst  software_using.rst  testing.rst
docs/source/api/: pEp._gen.rst  pEp._pEp.rst  pEp.rst
examples/: simple_xml_msgformat.py
gitlab/debian/: planckPythonWrapper-release.conf
src/: Identity.cc  Identity.hh  adapter.cc  adapter.hh  basic_api.cc  basic_api.hh  converting.cc  converting.hh  identity.cc  identity.hh  locked_queue.hh  message.cc  message.hh  message_api.cc  message_api.hh  pEpmodule.cc  pEpmodule.hh  str_attr.cc  str_attr.hh  sync_mixin.cc  sync_mixin.hh  user_interface.cc  user_interface.hh
src/pEp/: Makefile.conf  __init__.py
src/pEp/_gen/: Makefile  Makefile.conf  adapter_main.hh  pEpModule.cc
src/pEp/_pEp/: Makefile  Makefile.conf  adapter_main.cc  adapter_main.hh  basic_api.cc  basic_api.hh  identity.cc  identity.hh  message.cc  message.hh  message_api.cc  message_api.hh  pEpmodule.cc  pEpmodule.hh  str_attr.cc  str_attr.hh  user_interface.cc  user_interface.hh
src/pEp/_pybind/: Makefile  pEpModule.cc
src/pEp/native_pEp/: adapter.cc  adapter.hh  basic_api.cc  basic_api.hh  identity.cc  identity.hh  message.cc  message.hh  message_api.cc  message_api.hh  pEpmodule.cc  pEpmodule.hh  str_attr.cc  str_attr.hh  user_interface.cc  user_interface.hh
test/: README.md  basic_doctest.py  codec_doctest.py  doctest_PYADPT-55.py  imap_settings.py  miniimap.py  minimail.py  mp_sync_test.py  multipEp.py  pyadpt-57.py  pyadpt-58.py  pyadpt-81.py  start_sync.py  sync_handshake.py  sync_test.py
test/data/keys/: inquisitor-0xA4728718_full_expired.priv.asc
test/profiling/: README  mp_load_test.py  profile.d  results.txt  trace_analysis.py
tests/: __init__.py  conftest.py  constants.py  model.py  test_basic.py  test_blob.py  test_identity.py  test_message.py  test_pep.py  utils.py
tests/data/: 1A97F263D8319D6885F638C5AA81E1B5457A2B40.pub.asc  1A97F263D8319D6885F638C5AA81E1B5457A2B40.sec.asc  2D35731B9C754564CBAD15D2D18F7444594F2283.pub.asc  2D35731B9C754564CBAD15D2D18F7444594F2283.sec.asc  3E45175EE953EBBEB948F11A6A03DB2A17FB9D15.pub.asc  3E45175EE953EBBEB948F11A6A03DB2A17FB9D15.sec.asc  6A9835699EF1215F1558A496D9C1D4B0984094E5.pub.asc  6A9835699EF1215F1558A496D9C1D4B0984094E5.sec.asc  README.md
utils/: pEp
