
[build-system]
# Preparing for PEP-517/PEP-518, but not in effect yet.
# These requires are not effective yet, setup.cfg is.
requires =[
        "setuptools >=39.2.0",
        "setuptools_scm >= 4.1.2",
        "wheel",
        ]

build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rP --forked"
testpaths = [
    "tests",
]

