[metadata]
name = pEp
#TODO: automate version pull from hg/git
version = 2.2.0-RC1
url = https://pep.foundation
download_url =
ext_package = pEp
author = Volker Birk
author_email = vb@pep-project.org
maintainer = Matthias Heckmann
maintainer_email = heck@pep.foundation
description = p≡p for Python
long_description = file: README.md
keywords = pEp, crypto, end-to-end, python adapter, key management, high-level
license = GNU Affero General Public License
license_files = LICENSE
platforms = linux, macOs
classifiers =
    Intended Audience :: Developers
    Topic :: Utilities
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Development Status :: 3 - Alpha

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
test_suite = tests
setup_requires =
    setuptools >=38.3.0
install_requires =
    setuptools >=38.3.0
tests_require =
    pytest
    tox

[options.extras_require]
doc = sphinx
