[metadata]
name = pEp
url = https://pep.foundation
download_url =
ext_package = pEp
author = Volker Birk, heck, Hartmut Goebel, juga
author_email = vb@pep-project.org
maintainer = heck
maintainer_email = heck@pep.foundation
description = p≡p for Python
long_description = file: README.md
keywords = pEp, crypto, end-to-end, python adapter, key management, high-level
license = GNU Affero General Public License
license_files = LICENSE.txt
platforms = linux, macOs
classifiers =
    Intended Audience :: Developers
    Topic :: Utilities
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Development Status :: 3 - Alpha

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.7,<3.9
test_suite = tests
install_requires =
# deprecated/redundant with pyproject.toml, but lets keep both ways around for now
setup_requires =
    setuptools >=39.2.0
    setuptools_scm >= 4.1.2
[options.extras_require]
# To install these dependencies, run pip install .[test]
test =
    pytest
    pytest-forked
    lxml
    termcolor

doc = sphinx
